@@ -14,7 +14,8 @@ import pytest
 
 import pickle
 
-from jinja2.utils import LRUCache, escape, object_type_repr, urlize
+from jinja2.utils import LRUCache, escape, object_type_repr, urlize, \
+     select_autoescape
 
 
 @pytest.mark.utils
@@ -56,6 +57,20 @@ class TestHelpers(object):
         assert object_type_repr(X()) == 'test_utils.X object'
         assert object_type_repr(None) == 'None'
         assert object_type_repr(Ellipsis) == 'Ellipsis'
+
+    def test_autoescape_select(self):
+        func = select_autoescape(
+            enabled_extensions=('html', '.htm'),
+            disabled_extensions=('txt',),
+            default_for_string='STRING',
+            default='NONE',
+        )
+
+        assert func(None) == 'STRING'
+        assert func('unknown.foo') == 'NONE'
+        assert func('foo.html') == True
+        assert func('foo.htm') == True
+        assert func('foo.txt') == False
 
 
 @pytest.mark.utils
